refs# 2150 jambeth-ioc: fixed bug in JarURLProvider.java